--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Погода</title>
 </head>
 <body>
-$END$
+<h1>Інформація про погоду</h1>
+
+<!-- Форма для пошуку по місту -->
+<form action="/weather" method="get">
+    <label for="city">Місто:</label>
+    <input type="text" id="city" name="city" required>
+    <button type="submit">Дізнатись погоду</button>
+</form>
+
+<!-- Виведення інформації про погоду -->
+<div th:if="${weatherData}">
+    <h2>Погода в місті: <span th:text="${city}"></span></h2>
+    <p th:text="${weatherData}"></p>
+</div>
+
+<!-- Виведення помилки, якщо місто не знайдено -->
+<div th:if="${error}">
+    <h2 th:text="${error}"></h2>
+</div>
 </body>
 </html>
